@@ -2,9 +2,8 @@
 
 Personal finance manager. Work in progress.
 
-## Running with Java 9
+## Running with Java 10
 
 The following options must be added to java command line:
 
 * --add-exports javafx.base/com.sun.javafx.event=controlsfx
-* --add-modules java.xml.bind
